@@ -2,6 +2,8 @@
 
 The Headless Executor runs Brokk sessions in a server mode, controllable via HTTP+JSON API. It's designed for remote execution, CI/CD pipelines, and programmatic task automation.
 
+The `brokk-code` client currently bundles or targets headless executor version **0.23.0.beta4** by default when launched via JBang.
+
 For end-to-end request examples (sessions, jobs, events, and mode-specific payloads), see [headless-executor-testing-with-curl.md](headless-executor-testing-with-curl.md).
 
 ## Configuration
@@ -464,6 +466,16 @@ Once running, the executor exposes the following endpoints:
   - **ISSUE_WRITER mode**: Set `"tags": { "mode": "ISSUE_WRITER" }` to discover evidence in the repo and create a GitHub issue (requires github_token, repo_owner, repo_name in tags).
   - **ARCHITECT mode** (default): Orchestrates multi-step planning and implementation
 
+### Observability and Model Controls (0.23.0.beta4)
+
+Version 0.23.0.beta4 introduces refined controls for LLM reasoning and structured cost reporting.
+
+#### Cost Reporting
+The executor now emits structured `NOTIFICATION` events with a `level: "COST"` and a numeric `cost` field representing USD. Clients (like `brokk-code`) use these to track session and job totals.
+
+#### Reasoning Levels
+Models supporting "Reasoning Effort" (like OpenAI o1/o3) can be controlled via `reasoningLevel`.
+
 #### Job-level model overrides (optional)
 
 You can optionally override model behaviors per job:
@@ -560,7 +572,7 @@ Run the JAR:
 
 ```bash
 java -Djava.awt.headless=true -Dapple.awt.UIElement=true \
-  -cp app/build/libs/brokk-<version>.jar \
+  -cp app/build/libs/brokk-0.23.0.beta4.jar \
   ai.brokk.executor.HeadlessExecutorMain \
   --exec-id 550e8400-e29b-41d4-a716-446655440000 \
   --listen-addr 0.0.0.0:8080 \
@@ -666,7 +678,10 @@ curl -v --cacert local-ca.pem --cert client.pem --key client.key \
 When launching via **jbang**, pass these flags before the script/alias:
 
 ```bash
-jbang -Djava.awt.headless=true -Dapple.awt.UIElement=true brokk-headless@brokkai/brokk-releases [args]
+jbang -Djava.awt.headless=true -Dapple.awt.UIElement=true \
+  --java 21 \
+  -R "-Djava.awt.headless=true -Dapple.awt.UIElement=true --enable-native-access=ALL-UNNAMED" \
+  brokk-headless@brokkai/brokk-releases [args]
 ```
 
 **Note:** The JAR requires the fully-qualified main class (`ai.brokk.executor.HeadlessExecutorMain`) as the first argument. Brokk clients (such as the Python TUI and VS Code extension) automatically include these JVM flags when managing the executor lifecycle.
